<resources>
    <string name="app_name">Find A Doctor (JDWNRH)</string>
    <string name="app_name_short">Find A Doctor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="jdwnrh_hosp_name_short">JDW National Referral Hospital</string>
*    <string name="search">Search</string>

*    <!-->Menu String Resources -->
    <string name="notif">Notification</string>
    <string name="login">Login</string>
    <string name="feedback">Send Feedback</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="moreapps">Related Apps</string>
    <string name="communicate">Communication</string>
    <string name="more">More</string>

    <!-- Main Content Label Resources -->
    <string name="lanes">Anesthesiology</string>
    <string name="lcom">Community Health</string>>
    <string name="ldent">Dental</string>
    <string name="lderm">Dermatology</string>
    <string name="lemer">Emergency</string>
    <string name="lent">ENT</string>
    <string name="lfore">Forensic</string>
    <string name="lopd">General OPD</string>
    <string name="lgyna">Gynaecology</string>
    <string name="lmed">Medical</string>
    <string name="lopth">Ophthalmology</string>
    <string name="lortho">Orthopaedic</string>
    <string name="lpath">Pathology</string>
    <string name="lped">Pediatrics</string>
    <string name="lphar">Pharmacy</string>
    <string name="lpsyc">Psychiatry</string>
    <string name="lradi">Radiology</string>
    <string name="lsurg">Surgical</string>

    <!-- Floating Action Button Activity String Reference Resources -->
    <string name="dial">Contact Us</string>
    <string name="callInst">Tap the button to make a Call</string>

    <!-- Feedback Activity Strings -->
    <string name="enter_feedback">Enter Your Feedback Here</string>
    <string name="feedbackAno">Your Feedback is Anonymous.</string>
    <string name="feedbackInfo">You can provide feedback for the hospital, as well as app.</string>

    <!-- About Us Section String Resource Reference -->
    <string name="App_heading">Find A Doctor</string>
    <string name="about_App">This Android App Find A Doctor is to check the availability of doctors in Jigme Dorji Wangchuck National Referral Hospital. This App provides platform to avail the services facilitated by doctors and theiravailability in the hospital if users have installed this app.</string>
    <string name="search1">The users can search the doctors using the search button by their name or their department.</string>
    <string name="notification">The notification feature will keep the users up to date with the information about the hospital, be it outbreak of diseases or any network services failure.</string>

    <!-- Help Activity String Resource -->
    <string name="help_feature"> User Manual </string>
    <string name="about_search">This button helps user to search the doctor through their name or by their specialization.</string>
    <string name="about_login">Doctors need to enter their credentials to update their status.</string>
    <string name="about_newsfeed">This feature provides information and alert the users about the latest outbreak of diseases and
        updates the important messages. </string>

    <string name="about_setting">This feature contain list of options such as Login,About us,Help,Feedback,Rate us,Share app
        and More Apps.</string>
    <string name="about_help">This feature provides user manual for the app users to guide them when they encounter with the problems.</string>
    <string name="about_shareApp">This section of setting is to suggest the users to share app to social media
        if it is found very useful and productive.</string>

    <string name="about_aboutFeature">This section of the setting is to make users know more about the App and their functionality.</string>
    <string name="about_feedback"> This feature provides the platform for users to comments and give feedback for the betterment of the App.</string>
    <string name="about_rateUs">This section is to rate the App according to the services facilitated by the App to the users.</string>
    <string name="back">Back</string>
    <string name="tg">Help feature</string>
    <string name="next">Next</string>
    <string name="setting_feature">Setting feature</string>
    <string name="share_app">Share App</string>
    <string name="login_button">This provides an Admin and doctors to enter their credentials to update their status.</string>
    <string name="hosp_image_desc">Hospital Image</string>
    <string name="login_feature">Login feature</string>

    <!-- Related Apps String Resources -->
    <string name="moreInst">More Apps from JDWNRH</string>
    <string name="title_activity_doctor_login">Sign in</string>
    <string name="docApp">DocApp </string>
    <string name="queueApp">QueueApp </string>
    <string name="mhGApp">mhGApp</string>
    <string name="child">Child Development </string>

    <!-- Login Screen String Resource -->
    <string name="loginImageDesc">Login Screen Logo</string>
    <string name="targetTitle">Check Availability</string>
    <string name="doc_profile_label">Your Profile</string>

    <string name="nameTitle">Name</string>
    <string name="avail">Availability</string>
    <string name="endOfListNot">End of List</string>
    <string name="title_activity_doc_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="loading">Loading Profile. Please Wait&#8230;</string>
    <string name="empidLabel">Employee ID : </string>
    <string name="nameLabel">Name : </string>
    <string name="departmentLabel">Department : </string>
    <string name="designationLabel">Designation : </string>
    <string name="statusLabel">Change Status : </string>
    <string name="logoutdoc">Logout Here</string>

</resources>
