<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/notif" />

        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/login" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                android:actionProviderClass="android.widget.ShareActionProvider"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate" />
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_related"
                android:icon="@android:drawable/ic_menu_more"
                android:title="@string/moreapps" />
        </menu>
    </item>
</menu>