<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.jdwnrh.www.findadoctor.HelpA">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="@id/button4"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="center"
                android:text="User Manual"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:text="Search feature"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/about_search"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_feature"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/about_login"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginBottom="8dp"
                android:text="Newsfeed feature"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/about_newsfeed"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/setting_feature"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginBottom="16dp"
                android:gravity="left"
                android:text="@string/about_setting"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/tg"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/about_help"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/share_app"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/about_shareApp"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="7dp"
                android:gravity="left"
                android:text="About Us"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"

                android:layout_height="85dp"
                android:layout_marginBottom="-20dp"
                android:layout_weight="0.25"
                android:gravity="left"
                android:text="@string/about_aboutFeature"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="7dp"
                android:gravity="left"
                android:text="Feedback"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/about_feedback"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="7dp"
                android:gravity="left"
                android:text="Rate Us"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/about_rateUs"
                android:textSize="16dp"
                android:textStyle="italic" />


            <Button
                android:id="@+id/bt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goNext"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginEnd="16dp"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="41dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
