<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.jdwnrh.www.findadoctor.HelpB">

    <Button
        android:id="@+id/bt2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:hapticFeedbackEnabled="false"
        android:onClick="goPrev"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt3"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goNext"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="41dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/bt2"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/setting_feature"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginBottom="16dp"
                android:gravity="left"
                android:text="@string/about_setting"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/tg"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/about_help"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="left"
                android:text="@string/share_app"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:text="@string/about_shareApp"
                android:textSize="16sp"
                android:textStyle="italic" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
