<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.gov.jdwnrh.www.findadoctor.Feedback"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="98dp"
                android:layout_height="86dp"
                android:layout_above="@+id/feedbackSpace"
                app:srcCompat="@drawable/feedback" />

            <TextView
                android:id="@+id/feedbackDescription"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/feedbackInfo"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/feedbackSpace"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:layout_margin="@dimen/fab_margin"
                android:inputType="textMultiLine"
                android:hint="@string/enter_feedback"
                android:textColorHint="@color/hintColor"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SubmitFeedback"
                android:text="Submit"
                android:textAllCaps="false"
                android:background="@android:color/holo_blue_light"
                android:textColor="@android:color/white"/>

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/anoHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/feedbackAno"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
